# U-RAPTOR-PUB

./: LICENSE  README.md  install_dep.sh  pyproject.toml  requirements.txt
docs/: QUICK_REFERENCE.md  SNR_EVALUATION_SYSTEM.md
notebooks/: inference.ipynb  plot.ipynb
src/data/: dataset.py  rfuav.py
src/pytorch/: README.md  __init__.py  binary_classifier.py  data_loader.py  datagen.py  datagen_pickle.py  drone_classification.py  generator_data_loader.py  inference.py  pickle_classifier.py  results.txt  train_binary_classifier.sh  train_drone_classifier.sh
src/yolo/: README.md  __init__.py  augment_annotations.py  class_probabilities.py  custom_ultralytics.py  dataset_balancer.py  dataset_cleaner.py  dataset_test_creator.py  download_and_train_yolo.sh  environment.yml  metadata.py  model_evaluator.py  plotting_patch.py  requirements.txt  train_yolo.py  utils.py
